# passau-cplusplus-oop

./: .gitignore  CMakeLists.txt  README.md  assignment.txt  main.cpp  whoami
question1/: expr.cpp  expr.h  main.cpp  safeint.cpp  safeint.h  utils.h
question2/: Course.cpp  Course.h  Grade.h  Makefile  Student.cpp  Student.h  main.cpp  queue.h  rotate.cpp  transaction.cpp  transaction.h  transactions.txt
question2/csv/: 5852-grade.csv  5852-scores.csv  5853-grade.csv  5853-scores.csv  5854-grade.csv  5854-scores.csv  5855-grade.csv  5855-scores.csv  courses.csv  students.csv
question3/: circle.cpp  circle.h  circumference.h  ellipse.cpp  ellipse.h  main.cpp  polygon.h  shape.h  square.cpp  square.h  triangle.cpp  triangle.h  tuple.cpp
question4/: main.cpp  sharedq.cpp  sharedq.h
